profilelist1exp/unpackaged/objects/Account_Play__c.object
<CustomObject>
    <fields>
        <fullName>Solution_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plays_SS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System_Id__c</fullName>
        <externalId>true</externalId>
        <label>Source System Id</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status_Importance__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &quot;Requires Follow-Up&quot;) , 1, 
IF( ISPICKVAL( Status__c , &quot;Future Follow-Up&quot;) , 2, 
IF( ISPICKVAL( Status__c , &quot;Attempted to Contact - Awaiting Response&quot;) , 3, 
IF( ISPICKVAL( Status__c , &quot;Nominated&quot;) , 4, 
IF( ISPICKVAL( Status__c , &quot;Opportunity not Created&quot;) , 5, 
IF( ISPICKVAL( Status__c , &quot;Opportunity not Linked&quot;) , 6, 
IF( ISPICKVAL( Status__c , &quot;Accepted&quot;) , 7, 
IF( ISPICKVAL( Status__c , &quot;Accepted By Sales&quot;) , 8, 
IF( ISPICKVAL( Status__c , &quot;Accepted - Completed Follow-Up&quot;) , 9, 
IF( ISPICKVAL( Status__c , &quot;Rejected - Completed Follow-Up&quot;) , 10, 
IF( ISPICKVAL( Status__c , &quot;Nomination Rejected by Marketing&quot;) , 11, 
IF( ISPICKVAL( Status__c , &quot;Nomination Rejected by Sales&quot;) , 12, 
IF( ISPICKVAL( Status__c , &quot;Closed - Expired&quot;) , 13, 
IF( ISPICKVAL( Status__c , &quot;Inactive&quot;) , 14, 
IF( ISPICKVAL( Status__c , &quot;Cancelled&quot;) , 15, 
100)))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Importance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accepted</fullName>
                    <color>#0B6FCE</color>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>Accepted By Sales</fullName>
                    <color>#78C953</color>
                    <label>Accepted By Sales</label>
                </value>
                <value>
                    <fullName>Accepted - Completed Follow-Up</fullName>
                    <color>#E27001</color>
                    <label>Accepted - Completed Follow-Up</label>
                </value>
                <value>
                    <fullName>Assign to Channel Partner</fullName>
                </value>
                <value>
                    <fullName>Attempted to Contact - Awaiting Response</fullName>
                    <color>#F3D904</color>
                    <label>Attempted to Contact - Awaiting Response</label>
                </value>
                <value>
                    <fullName>Attended</fullName>
                    <color>#A845DC</color>
                    <label>Attended</label>
                </value>
                <value>
                    <fullName>Bounced</fullName>
                    <color>#A53711</color>
                    <label>Bounced</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <color>#66E9BD</color>
                    <label>Cancelled</label>
                </value>
                <value>
                    <fullName>Clicked</fullName>
                    <color>#0B24BE</color>
                    <label>Clicked</label>
                </value>
                <value>
                    <fullName>Closed - Expired</fullName>
                    <color>#419249</color>
                    <label>Closed - Expired</label>
                </value>
                <value>
                    <fullName>Completed Follow-Up</fullName>
                    <color>#B6E32E</color>
                    <label>Completed Follow-Up</label>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                    <color>#641CCF</color>
                    <label>Contacted</label>
                </value>
                <value>
                    <fullName>Existing Opportunity</fullName>
                    <color>#F96FB7</color>
                    <label>Existing Opportunity</label>
                </value>
                <value>
                    <fullName>Existing Opportunity or Quoted</fullName>
                </value>
                <value>
                    <fullName>General comment</fullName>
                    <color>#AFCADF</color>
                    <label>General comment</label>
                </value>
                <value>
                    <fullName>Identified</fullName>
                    <color>#8F6429</color>
                    <label>Identified</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <color>#EFAE73</color>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <color>#57F17C</color>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Invited</fullName>
                    <color>#0B6FCE</color>
                    <label>Invited</label>
                </value>
                <value>
                    <fullName>New Opportunity</fullName>
                    <color>#78C953</color>
                    <label>New Opportunity</label>
                </value>
                <value>
                    <fullName>Nominated</fullName>
                    <color>#E27001</color>
                    <label>Nominated</label>
                </value>
                <value>
                    <fullName>Nomination Rejected by Marketing</fullName>
                    <color>#A845DC</color>
                    <label>Nomination Rejected by Marketing</label>
                </value>
                <value>
                    <fullName>Nomination Rejected by Sales</fullName>
                    <color>#F3D904</color>
                    <label>Nomination Rejected by Sales</label>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                    <color>#A53711</color>
                    <label>Not Interested</label>
                </value>
                <value>
                    <fullName>Offered</fullName>
                    <color>#66E9BD</color>
                    <label>Offered</label>
                </value>
                <value>
                    <fullName>Opened</fullName>
                    <color>#0B24BE</color>
                    <label>Opened</label>
                </value>
                <value>
                    <fullName>Opportunity not Created</fullName>
                    <color>#419249</color>
                    <label>Opportunity not Created</label>
                </value>
                <value>
                    <fullName>Opportunity not Linked</fullName>
                    <color>#B6E32E</color>
                    <label>Opportunity not Linked</label>
                </value>
                <value>
                    <fullName>Profiled customer</fullName>
                    <color>#641CCF</color>
                    <label>Profiled customer</label>
                </value>
                <value>
                    <fullName>Purchasing Plans identified</fullName>
                    <color>#F96FB7</color>
                    <label>Purchasing Plans identified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supporting_Information__c</fullName>
        <label>Supporting Information</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>System_Auto_Populated_AE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP AE System Auto-Populated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Auto_Populated_AP_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP Owner System Auto-Populated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Auto_Populated_ISR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP ISR System Auto-Populated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plays5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_User_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Sales User Assignment</label>
        <referenceTo>Territory_Sales_User_Assignment__c</referenceTo>
        <relationshipLabel>Account Plays</relationshipLabel>
        <relationshipName>Account_Plays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unqualified_Lead_Reasons__c</fullName>
        <label>Unqualified Lead Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Quality__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Unable to reach</fullName>
                </value>
                <value>
                    <fullName>No budget</fullName>
                </value>
                <value>
                    <fullName>No authority</fullName>
                </value>
                <value>
                    <fullName>No need</fullName>
                </value>
                <value>
                    <fullName>Not ready to buy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_Record__c</fullName>
        <formula>IF( 
AND( 
CONTAINS( $User.Profile_Name__c, &apos;Sales&apos;), 
ISPICKVAL(Status__c, &apos;Accepted - Completed Follow-Up&apos;)), 
HYPERLINK(&apos;apex/UpdateOrResetRLorAP?retURL=/&apos; &amp; Id &amp; &apos;&amp;id=&apos; &amp; Id &amp; &apos;&amp;action=Update&apos;, IMAGE(&quot;resource/1257839368000/MA_UpdateRecord&quot;, &apos;Update Record&apos;), &apos;_parent&apos;), 

IF( 
AND( 
CONTAINS( $User.Profile_Name__c, &apos;Sales&apos;), 
ISPICKVAL(Status__c, &apos;Rejected - Completed Follow-Up&apos;)), 
HYPERLINK(&apos;apex/UpdateOrResetRLorAP?retURL=/&apos; &amp; Id &amp; &apos;&amp;id=&apos; &amp; Id &amp; &apos;&amp;action=Update&apos;, IMAGE(&quot;resource/1282810384000/MA_UpdateRecord2&quot;, &apos;Update Record&apos;), &apos;_parent&apos;) &amp; &apos; &apos; &amp; 
HYPERLINK(&apos;apex/UpdateOrResetRLorAP?retURL=/&apos; &amp; Id &amp; &apos;&amp;id=&apos; &amp; Id &amp; &apos;&amp;action=Reset&apos;, IMAGE(&quot;resource/1282810236000/MA_Reset&quot;, &apos;Reset Record&apos;), &apos;_parent&apos;), 

IF(
 AND(!ISPICKVAL(Status__c, &apos;Routed to Channel&apos;), !ISPICKVAL(Status__c, &apos;Routed to Segment&apos;),
 OR( 
CONTAINS( $User.Profile_Name__c, &apos;Marketing&apos;), 
CONTAINS( $User.Profile_Name__c, &apos;System&apos;), 
CONTAINS( $User.Profile_Name__c, &apos;Lead Assignment&apos;), 
CONTAINS( $User.Profile_Name__c, &apos;IT&apos;) 
)), 
HYPERLINK(Id &amp; &apos;/e?nooverride=1&amp;retURL=/&apos; &amp; Id, IMAGE(&quot;resource/1254277273000/MA_UpdateRecord&quot;, &apos;Update Record&apos;), &apos;_parent&apos;), 
&apos; &apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_their_implementation_deadline__c</fullName>
        <label>What is their implementation deadline?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isExpiryDateChanged__c</fullName>
        <formula>IF( Campaign__r.Account_Play_Expiry_Date__c = Account_Play_Expiry_Date_New__c , &apos;No&apos;, &apos;Yes&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Expiry Date Changed?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Days_to_Close_AP__c</fullName>
        <formula>Account_Play_Close_Date__c - CreatedDate</formula>
        <label># of Days to Close AP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Days_to_Convert_AP_to_SA__c</fullName>
        <formula>Account_Play_Accepted_Date__c - CreatedDate</formula>
        <label># of Days to Convert AP to SA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Play</label>
    <listViews>
        <fullName>Account_Play_Test</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Play_Owner__c</columns>
        <columns>Account_Play_Expiry_Date__c</columns>
        <columns>Campaign__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign__c</field>
            <operation>equals</operation>
            <value>FY11W02-LE-ABU-CA-ST-Server_Refresh_Dallal</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account_Play__c.GBL_Account_Play_RT_R10_10</value>
        </filters>
        <label>Canada Svr Refresh Dallal</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Play_Owner_Role__c</columns>
        <columns>Account_Play_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Account_Play_Expiry_Date_New__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account_Play__c.GBL_Account_Play_RT_R10_10</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All4</fullName>
        <columns>NAME</columns>
        <columns>Account_Play_Owner_Role__c</columns>
        <columns>Account_Play_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Account_Play_Expiry_Date_New__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account_Play__c.GBL_Account_Play_RT_R10_10</value>
        </filters>
        <filters>
            <field>Campaign__c</field>
            <operation>equals</operation>
            <value>FY14W14-PLE-ABU-MU-ST-Power_to_Change_NSS</value>
        </filters>
        <label>FY14-LI-Power_to_Change_NSS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Awaiting_Follow_Up</fullName>
        <columns>NAME</columns>
        <columns>Account_Play_Owner_Role__c</columns>
        <columns>Account_Play_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Account_Play_Expiry_Date_New__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Attempted to Contact - Awaiting Response</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account_Play__c.GBL_Account_Play_RT_R10_10</value>
        </filters>
        <label>Attempted to Contact - Awaiting Response</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_by_Me</fullName>
        <columns>NAME</columns>
        <columns>Account_Play_Owner_Role__c</columns>
        <columns>Account_Play_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Account_Play_Expiry_Date_New__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>selvavignesh</value>
        </filters>
        <label>Created by Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_by_Me_2</fullName>
        <columns>NAME</columns>
        <columns>Account_Play_Owner_Role__c</columns>
        <columns>Account_Play_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Account_Play_Expiry_Date_New__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>005A0000003NL4U</value>
        </filters>
        <label>Created by Me_new</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Expired_Follow_Up</fullName>
        <columns>NAME</columns>
        <columns>Account_Play_Owner_Role__c</columns>
        <columns>Account_Play_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Account_Play_Expiry_Date_New__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed - Expired</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account_Play__c.GBL_Account_Play_RT_R10_10</value>
        </filters>
        <label>Expired Follow-Up</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FY14_PAD_Power_to_Change_NSS</fullName>
        <columns>NAME</columns>
        <columns>Account_Play_Owner_Role__c</columns>
        <columns>Account_Play_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Account_Play_Expiry_Date_New__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account_Play__c.GBL_Account_Play_RT_R10_10</value>
        </filters>
        <filters>
            <field>Campaign__c</field>
            <operation>equals</operation>
            <value>FY14W15-PAD-ABU-US-NSS-ST-Power_To_Change</value>
        </filters>
        <label>FY14-PAD-Power_to_Change_NSS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FY14_PAD_Power_to_Change_NSS1</fullName>
        <columns>NAME</columns>
        <columns>Account_Play_Owner_Role__c</columns>
        <columns>Account_Play_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Account_Play_Expiry_Date_New__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Play_Owner_Role__c</field>
            <operation>contains</operation>
            <value>Networking</value>
        </filters>
        <filters>
            <field>Account_Play_Owner__c</field>
            <operation>equals</operation>
            <value>Camilo Valderrama</value>
        </filters>
        <label>FY14-PAD-Power_to_Change_NSS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FY14_PAD_Power_to_Change_NSS2</fullName>
        <columns>NAME</columns>
        <columns>Account_Play_Owner_Role__c</columns>
        <columns>Account_Play_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Account_Play_Expiry_Date_New__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Play_Owner_Role__c</field>
            <operation>contains</operation>
            <value>Networking</value>
        </filters>
        <filters>
            <field>Account_Play_Owner__c</field>
            <operation>equals</operation>
            <value>Camilo Valderrama</value>
        </filters>
        <label>FY14-PAD-Power_to_Change_NSS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FY14_PAD_Power_to_Change_NSS3</fullName>
        <columns>NAME</columns>
        <columns>Account_Play_Owner_Role__c</columns>
        <columns>Account_Play_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Account_Play_Expiry_Date_New__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Play_Owner_Role__c</field>
            <operation>contains</operation>
            <value>Networking</value>
        </filters>
        <label>FY14-PAD-Power_to_Change_NSS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Fiorino_Server_Refresh_Play</fullName>
        <columns>NAME</columns>
        <columns>Account_Play_Owner_Role__c</columns>
        <columns>Account_Play_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Account_Play_Expiry_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Called_Customer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign__c</field>
            <operation>equals</operation>
            <value>FY11W02-SMB-ABU-CAN-EM-VMware_Playbook</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account_Play__c.GBL_Account_Play_RT_R10_10</value>
        </filters>
        <label>Fiorino - Server Refresh Play</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Completed_Follow_Up</fullName>
        <booleanFilter>1 or 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Account_Play_Owner_Role__c</columns>
        <columns>Account_Play_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Account_Play_Expiry_Date_New__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Accepted - Completed Follow-Up,Rejected - Completed Follow-Up</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed Follow-Up</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account_Play__c.GBL_Account_Play_RT_R10_10</value>
        </filters>
        <label>Completed Follow-Up</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Future_Follow_Up</fullName>
        <columns>NAME</columns>
        <columns>Account_Play_Owner_Role__c</columns>
        <columns>Account_Play_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Account_Play_Expiry_Date_New__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Future Follow-Up</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account_Play__c.GBL_Account_Play_RT_R10_10</value>
        </filters>
        <label>Future Follow-Up</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_All</fullName>
        <booleanFilter>1 or 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Account_Play_Owner_Role__c</columns>
        <columns>Account_Play_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Account_Play_Expiry_Date_New__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Follow Up,Future Follow-Up,Opportunity not Created,Requires Follow-Up</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Opportunity not Linked</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account_Play__c.GBL_Account_Play_RT_R10_10</value>
        </filters>
        <label>All Open</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AP - {000000000}</displayFormat>
        <label>Account Play #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plays</pluralLabel>
    <recordTypes>
        <fullName>GBL_Account_Play_RT_R10_10</fullName>
        <active>true</active>
        <label>GBL_Account_Play_RT_R10.10</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lattice</fullName>
        <active>true</active>
        <label>Lattice</label>
    </recordTypes>
    <recordTypes>
        <fullName>S_P_License_Renewals</fullName>
        <active>true</active>
        <description>Software and Peripherals License Renewals Account Play</description>
        <label>S&amp;P License Renewals</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AP_and_Inactive_campaign_rule</fullName>
        <active>true</active>
        <description>Account Play records should not be created for Inactive Campaigns</description>
        <errorConditionFormula>AND(ISNEW(), NOT( Campaign__r.IsActive = TRUE ))</errorConditionFormula>
        <errorDisplayField>Accept_Reject_Status__c</errorDisplayField>
        <errorMessage>Account Play records should not be created for Inactive Campaigns</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Plays_should_be_Account_Campaign</fullName>
        <active>true</active>
        <description>Enhanced in R13.10 for INC000008982618
Account Plays should be created for Account based campaigns Only</description>
        <errorConditionFormula>IF(Campaign__r.Is_this_Account_Play_Campaign__c == FALSE,true,false)</errorConditionFormula>
        <errorMessage>Account Plays should be created for Account based campaigns Only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_field_Access</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISCHANGED(Account__c), 
NOT( 
OR( 
CONTAINS($Profile.Name, &quot;GBL Lead Assignment Users&quot;),	
CONTAINS($Profile.Name, &quot;GBL Admin Marketing User&quot;),	
CONTAINS($Profile.Name, &quot;System Administrator&quot;) 
) 
) 
)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>You do not have permission to update this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMAP_Cant_Associate_AP_to_Channel_Camp</fullName>
        <active>true</active>
        <description>R14.2 CMAP Validation Rule to prevent user from creating a new Account Play when RT is Channel Campaign.</description>
        <errorConditionFormula>Campaign__r.RecordTypeId = &quot;012A00000012Xt5&quot;</errorConditionFormula>
        <errorMessage>Cannot associate an Account Play to a Channel Campaign.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campaign_Name_Mandatory_for_Account_Play</fullName>
        <active>true</active>
        <description>Field is mandatory even when it is coming from integration and data load.</description>
        <errorConditionFormula>AND(ISBLANK( Campaign__c),$RecordType.Id !=&apos;012A0000000Vhxd&apos;)</errorConditionFormula>
        <errorMessage>Campaign is mandatory for Account Play records</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campaign_Vehicle_Matching</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT( TEXT(Campaign_Vehicle__c )=TEXT( Campaign__r.Type)), $RecordType.Id !=&apos;012A0000000Vhxd&apos;)</errorConditionFormula>
        <errorDisplayField>Campaign_Vehicle__c</errorDisplayField>
        <errorMessage>The Campaign Vehicle must be the same as the Campaign Vehicle on the Campaign record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campaign_name_should_not_be_changed</fullName>
        <active>true</active>
        <description>After creating a Account Play records, the campaign name should not be changed</description>
        <errorConditionFormula>AND( NOT( ISNEW()), ISCHANGED( Campaign__c ), $RecordType.Id !=&apos;012A0000000Vhxd&apos;)</errorConditionFormula>
        <errorMessage>Campaign name should not be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Follow_Up_Date_is_required</fullName>
        <active>true</active>
        <description>If Unqualified Lead Reasons is Future Follow Up or Called Customer? is No, Follow-Up Date should not be blank</description>
        <errorConditionFormula>AND(OR(ISPICKVAL( Unqualified_Lead_Reasons__c , &apos;Future Follow-Up&apos;), ISPICKVAL( Called_Customer__c , &quot;No&quot;) ), ISNULL( Follow_Up_Date__c ),$RecordType.Id !=&apos;012A0000000Vhxd&apos; )</errorConditionFormula>
        <errorDisplayField>Follow_Up_Date__c</errorDisplayField>
        <errorMessage>Please enter the Follow-Up Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>License_details_mandatory_for_LR_AP</fullName>
        <active>true</active>
        <description>Field is mandatory even when it is coming from integration and data load.</description>
        <errorConditionFormula>AND(OR(ISBLANK(Projected_Value__c),ISBLANK(Manufacturer_Name__c),ISBLANK(License_Expiration_Date__c)), $RecordType.Id = &apos;012A0000000Vi2O&apos; )</errorConditionFormula>
        <errorDisplayField>Projected_Value__c</errorDisplayField>
        <errorMessage>Projected Value, Manufacturer Name,  License Expiration Date are mandatory for License Renewal Account Play records</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Contact_Account_Match</fullName>
        <active>true</active>
        <description>Primary Contact should be selected from the Account associated to this Account Play</description>
        <errorConditionFormula>AND( IF( Account__r.Id = Primary_Contact__r.AccountId, FALSE, TRUE), NOT(LEN(Primary_Contact__c ) = 0),$RecordType.Id !=&apos;012A0000000Vhxd&apos;, NOT($Setup.System_Behavior_Bypasser__c.Bypass_Account_Play_VRs__c))</errorConditionFormula>
        <errorDisplayField>Primary_Contact__c</errorDisplayField>
        <errorMessage>Primary Contact should be selected from the Account associated to this Account Play</errorMessage>
    </validationRules>
</CustomObject>